syntax ="proto3";
package GRPC.item;



service Items {
  rpc GetItems(SearchItemsParametersProto) returns (ItemProto);
}

message ItemCreationProto {
  int32 wareId = 1;
  int32 shelf_id = 2;
  int32 owner_id = 3;
}


  message SearchItemsParametersProto {
  int32 id = 1;
      }


message AddItemParametersProto {
  int32 wareId = 1;
  int32 owner_id = 2;
  int32 amount = 3;
}

message ItemProto {
  ItemTypeProto type = 1;
  int32 id = 2;
  AddItemParametersProto additem = 3;
  int32 shelf_id = 4;
}

message ItemTypeProto {
  int32 id = 1;
  double dimension_x = 2;
  double dimension_y = 3;
  double dimension_z = 4;
}